flow paciente actualizado

--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
@@ -76,6 +76,11 @@
       </div>
 
       <div class="form-group">
+        <label>Estado:</label>
+        <input type="text" [(ngModel)]="pacienteSeleccionado.Estado" name="Estado" required />
+      </div>
+
+      <div class="form-group">
         <label>Número de Seguridad Social:</label>
         <input type="text" [(ngModel)]="pacienteSeleccionado.SeguridadSocial" name="SeguridadSocial" required />
       </div>
