--- a/ClientApp/src/app/medico/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/medico/pages/buscar-paciente/buscar-paciente.component.html
@@ -40,7 +40,7 @@
     <div class="pacientes-container">
       <div *ngFor="let paciente of pacientesEncontrados" class="paciente-info">
         <p><strong>Nombre:</strong> {{ paciente.Nombre }}</p>
-        <p><strong>Edad:</strong> {{ paciente.Dni }}</p>
+        <p><strong>DNI:</strong> {{ paciente.Dni }}</p>
         <p><strong>Fecha de Nacimiento:</strong> {{ paciente.FechaNacimiento | date: 'dd/MM/yyyy' }}</p>
         <p><strong>Estado:</strong> {{ paciente.Estado }}</p>
         <p><strong>Seguridad Social:</strong> {{ paciente.SeguridadSocial }}</p>
@@ -65,13 +65,18 @@
       </div>
 
       <div class="form-group">
-        <label>Edad:</label>
-        <input type="number" [(ngModel)]="pacienteSeleccionado.Dni" name="Dni" required />
+        <label>DNI:</label>
+        <input type="text" [(ngModel)]="pacienteSeleccionado.Dni" name="Dni" required />
       </div>
 
       <div class="form-group">
         <label>Fecha de Nacimiento:</label>
         <input type="date" [(ngModel)]="pacienteSeleccionado.FechaNacimiento" name="FechaNacimiento" required />
+      </div>
+
+      <div class="form-group">
+        <label>Estado:</label>
+        <input type="text" [(ngModel)]="pacienteSeleccionado.Estado" name="Estado" required />
       </div>
 
       <div class="form-group">
@@ -100,7 +105,6 @@
       </div>
 
       <button type="submit" class="update-btn">Actualizar Paciente</button>
-      <button type="button" (click)="cancelarEdicion()" class="cancel-btn">Cancelar</button>
     </form>
   </div>
 </div>
