--- a/ClientApp/src/app/medico/pages/consultas-programadas/consultas-programadas.component.html
+++ b/ClientApp/src/app/medico/pages/consultas-programadas/consultas-programadas.component.html
@@ -62,9 +62,9 @@
       <form (ngSubmit)="solicitarIngreso()">
         <label for="tipoCama">Tipo de Cama:</label>
         <select id="tipoCama" [(ngModel)]="tipoCama" name="tipoCama" required>
-          <option value="general">General</option>
-          <option value="uci">UCI</option>
-          <option value="postoperatorio">Postoperatorio</option>
+          <option value="General">General</option>
+          <option value="UCI">UCI</option>
+          <option value="Postoperatorio">Postoperatorio</option>
         </select>
 
         <label for="motivoIngreso">Motivo:</label>
