--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -2,14 +2,21 @@
   <h2>Roles</h2>
 
   <div class="search-container">
-    <label for="search">Buscar Rol por Nombre:</label>
-    <input
-      type="text"
-      id="search"
-      placeholder="Escribe para buscar..."
-      [(ngModel)]="searchTerm"
-      (ngModelChange)="filtrarRoles()"
-    />
+    <form [formGroup]="searchRolForm" (ngSubmit)="filtrarRoles()">
+      <label for="searchType">Buscar:</label>
+      <select id="searchType" formControlName="searchType">
+        <option value="nombreRol">Nombre</option>
+        <option value="id">ID</option>
+      </select>
+
+      <input
+        type="text"
+        id="searchTerm"
+        formControlName="searchTerm"
+        placeholder="Escribe para buscar..."
+        (input)="filtrarRoles()"
+      />
+    </form>
   </div>
 
   <div class="table-container">
