--- a/ClientApp/src/app/shared/roles/roles.component.css
+++ b/ClientApp/src/app/shared/roles/roles.component.css
@@ -1,4 +1,5 @@
 .roles-section {
+  font-family: Arial, sans-serif;
   margin: 20px;
 }
 
@@ -6,13 +7,16 @@
 .table-container,
 .form-container {
   background-color: rgb(228, 224, 224);
-  padding: 20px;
-  margin: 20px;
-  border-radius: 10px;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 7px;
   box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
   margin-bottom: 20px;
+  padding-bottom: 2.5px;
 }
-
+.form-container{
+  padding-bottom: 10px;
+}
 .table {
   width: 100%;
   border-collapse: collapse;
@@ -23,14 +27,15 @@
 th,
 td {
   border: 1px solid #ccc;
-  border-radius: 5px;
+  white-space: nowrap;
+
 }
 
 th,
 td {
-  padding: 10px;
-  text-align: left;
-  border-radius: 5px;
+  padding: 6px 8px;
+  border: 1px solid #ccc;
+  overflow: hidden;
 }
 
 th {
