--- a/ClientApp/src/app/shared/usuarios/usuarios.component.css
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.css
@@ -1,39 +1,50 @@
 .usuarios-section {
+  font-family:  Arial, sans-serif;
     margin: 20px;
   }
-  
+
   /* Contenedor para la tabla */
   .table-container, .form-container {
     background-color: rgb(228, 224, 224);
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 7px;
     box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    padding-bottom: 2.5px;
   }
-  
+  .form-container {
+    margin-top: 20px;
+
+    padding-bottom: 10px;
+  }
+
   .table {
     width: 100%;
     border-collapse: collapse;
-    border-radius: 5px;
+    font-size: 14px;
+    table-layout: auto;
+
   }
-  
+
   .table, th, td {
     border: 1px solid #ccc;
-    border-radius: 5px;
+    padding: 6px 8px;
+    white-space: nowrap;
+    overflow: hidden;
   }
-  
+
   th, td {
     padding: 10px;
     text-align: left;
     border-radius: 5px;
   }
-  
+
   th {
     background-color: #0078d4;
     color: white;
   }
-  
+
   button {
     margin-right: 5px;
     padding: 5px 10px;
@@ -41,24 +52,24 @@
     border-radius: 3px;
     cursor: pointer;
   }
-  
+
   button:hover {
     background-color: #0056a3;
     color: white;
   }
-  
+
   form {
     display: flex;
     flex-direction: column;
     gap: 5px;
     margin-top: 20px;
   }
-  
+
   label {
     font-weight: bold;
     margin-bottom: 5px;
   }
-  
+
   input[type="number"],
   input[type="date"],
   input[type="text"] {
@@ -68,17 +79,17 @@
     width: 100%;
     box-sizing: border-box;
   }
-  
+
   button[type="submit"] {
     align-self: flex-start;
     background-color: #0078d4;
     color: white;
   }
-  
+
   button[type="submit"]:hover {
     background-color: #0056a3;
   }
-  
+
   .hidden-text {
     -webkit-text-security: disc;
     width: 4px;
