--- a/ClientApp/src/app/administrativo/pages/registrar-paciente/registrar-paciente.component.css
+++ b/ClientApp/src/app/administrativo/pages/registrar-paciente/registrar-paciente.component.css
@@ -2,7 +2,7 @@
 .register-section {
   font-family: Arial, sans-serif;
   margin: 20px;
-  max-width: 1200px; /* Ajusta según el ancho que prefieras */
+  max-width: 100%; /* Ajusta según el ancho que prefieras */
   background-color: #f9f9f9;
   padding: 20px;
   border-radius: 8px;
