--- a/ClientApp/src/app/controlador-camas/pages/solicitudes-ingreso/solicitudes-ingreso.component.css
+++ b/ClientApp/src/app/controlador-camas/pages/solicitudes-ingreso/solicitudes-ingreso.component.css
@@ -2,7 +2,7 @@
 .solicitudes-ingreso-section {
   font-family: Arial, sans-serif;
   margin: 20px;
-  max-width: 1200px;
+  max-width: 100%;
   background-color: #f9f9f9;
   padding: 20px;
   border-radius: 8px;
