--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -10,7 +10,7 @@
           <option value="nombreRol">Nombre</option>
           <option value="id">ID</option>
         </select>
-
+        <div class="vr"></div>
         <input
           type="text"
           id="searchTerm"
