--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.css
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.css
@@ -1,7 +1,7 @@
 .habitaciones-section {
     margin: 20px;
   }
-  
+
   /* Contenedor para la tabla */
   .table-container, .form-container {
     background-color: rgb(228, 224, 224);
@@ -11,29 +11,29 @@
     box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
     margin-bottom: 20px;
   }
-  
+
   .table {
     width: 100%;
     border-collapse: collapse;
     border-radius: 5px;
   }
-  
+
   .table, th, td {
     border: 1px solid #ccc;
     border-radius: 5px;
   }
-  
+
   th, td {
     padding: 10px;
     text-align: left;
     border-radius: 5px;
   }
-  
+
   th {
     background-color: #0078d4;
     color: white;
   }
-  
+
   button {
     margin-right: 5px;
     padding: 5px 10px;
@@ -41,24 +41,24 @@
     border-radius: 3px;
     cursor: pointer;
   }
-  
+
   button:hover {
     background-color: #0056a3;
     color: white;
   }
-  
+
   form {
     display: flex;
     flex-direction: column;
     gap: 5px;
     margin-top: 20px;
   }
-  
+
   label {
     font-weight: bold;
     margin-bottom: 5px;
   }
-  
+
   input[type="number"],
   input[type="date"],
   input[type="text"] {
@@ -68,14 +68,48 @@
     width: 100%;
     box-sizing: border-box;
   }
-  
+
   button[type="submit"] {
     align-self: flex-start;
     background-color: #0078d4;
     color: white;
   }
-  
+
   button[type="submit"]:hover {
     background-color: #0056a3;
   }
-  
+  /* Estilo de la paginación */
+.paginacion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  gap: 5px;
+}
+
+.paginacion button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 3px;
+  background-color: #007bff;
+  color: #f0f0f0;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.paginacion button:disabled {
+  cursor: not-allowed;
+  background-color: #e0e0e0;
+  color: #999;
+}
+
+.paginacion button:not(:disabled):hover {
+  background-color: #0a4c93;
+  color: #fff;
+}
+
+.paginacion span {
+  font-size: 12px;
+  color: #333;
+}
